--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ override.tf.json
 # Ignore transient lock info files created by terraform apply
 .terraform.lock.hcl
 .terraform.tfstate.lock.info
+.terraform.lock copy.hcl
 
 # Include override files you do wish to add to version control using negated pattern
 # !example_override.tf
@@ -48,5 +49,5 @@ Thumbs.db
 .vscode/
 
 # Misc
-.zip
+*.zip
 *.pem
